--- a/public/users.html
+++ b/public/users.html
@@ -35,22 +35,46 @@
   </div>
 
   <div class="card p-4">
-    <h5>User Records</h5>
+  <h5>User Records</h5>
 
-    <table class="table table-hover mt-3">
-      <thead>
-        <tr>
-          <th>Image</th>
-          <th>Name</th>
-          <th>Email</th>
-          <th>Age</th>
-          <th>City</th>
-          <th>Action</th>
-        </tr>
-      </thead>
-      <tbody id="tbody"></tbody>
-    </table>
+  <table class="table table-hover mt-3">
+    <thead>
+      <tr>
+        <th>
+          <input type="checkbox" id="selectAll" onclick="toggleAll(this)">
+        </th>
+        <th>Image</th>
+        <th>Name</th>
+        <th>Email</th>
+        <th>Age</th>
+        <th>City</th>
+        <th>Action</th>
+      </tr>
+    </thead>
+    <tbody id="tbody"></tbody>
+  </table>
 
+  <button id="bulkDeleteBtn"
+          class="btn btn-danger mt-2 d-none"
+          onclick="deleteSelected()">
+    Delete Selected
+  </button>
+</div>
+<div class="modal fade" id="editModal" tabindex="-1">
+  <div class="modal-dialog">
+    <div class="modal-content p-4">
+      <h5>Edit User</h5>
+
+      <input type="hidden" id="editId">
+
+      <input id="editName" class="form-control mb-2" placeholder="Name">
+      <input id="editEmail" class="form-control mb-2" placeholder="Email">
+      <input id="editAge" class="form-control mb-2" placeholder="Age">
+      <input id="editCity" class="form-control mb-2" placeholder="City">
+      <input type="file" id="editImage" class="form-control mb-3">
+
+      <button class="btn btn-primary" onclick="updateUser()">Update</button>
+    </div>
   </div>
 </div>
 
@@ -59,26 +83,45 @@ async function loadUsers(url="/api/users") {
   const res = await fetch(url);
   const users = await res.json();
 
+  const tbody = document.getElementById("tbody");
+
   tbody.innerHTML = users.map(u => `
     <tr>
-      <td>${u.image ? `<img src="${u.image}">` : "-"}</td>
+      <td>
+        <input type="checkbox"
+               class="userCheckbox"
+               value="${u._id}"
+               onchange="handleCheckboxChange()">
+      </td>
+      <td>
+        ${u.image ? `<img src="${u.image}" width="50">` : "-"}
+      </td>
       <td>${u.name}</td>
       <td>${u.email}</td>
       <td>${u.age || ""}</td>
       <td>${u.city || ""}</td>
       <td>
-        <button class="btn btn-sm btn-danger"
-          onclick="delUser('${u._id}')">
-          Delete
-        </button>
-      </td>
+  <button class="btn btn-sm btn-warning"
+    onclick='editUser(${JSON.stringify(u)})'>
+    Update
+  </button>
+
+    <button class="btn btn-sm btn-danger"
+      onclick="delUser('${u._id}')">
+      Delete
+    </button>
+  </td>
     </tr>
   `).join("");
+
+  // Reset UI after reload
+  document.getElementById("selectAll").checked = false;
+  document.getElementById("bulkDeleteBtn").classList.add("d-none");
 }
 
 async function search() {
-  const name = searchName.value;
-  const email = searchEmail.value;
+  const name = document.getElementById("searchName").value;
+  const email = document.getElementById("searchEmail").value;
 
   const url = `/api/users/search?name=${name}&email=${email}`;
   loadUsers(url);
@@ -94,8 +137,89 @@ async function delUser(id) {
   loadUsers();
 }
 
+function toggleAll(source) {
+  const checkboxes = document.querySelectorAll(".userCheckbox");
+  checkboxes.forEach(cb => cb.checked = source.checked);
+  handleCheckboxChange();
+}
+
+function handleCheckboxChange() {
+  const selected = document.querySelectorAll(".userCheckbox:checked");
+  const deleteBtn = document.getElementById("bulkDeleteBtn");
+
+  if (selected.length > 0) {
+    deleteBtn.classList.remove("d-none");
+  } else {
+    deleteBtn.classList.add("d-none");
+  }
+}
+
+async function deleteSelected() {
+  const selected = document.querySelectorAll(".userCheckbox:checked");
+
+  if (selected.length === 0) {
+    alert("Please select at least one user");
+    return;
+  }
+
+  if (!confirm("Delete selected users?")) return;
+
+  const ids = Array.from(selected).map(cb => cb.value);
+
+  const response = await fetch("/api/users", {
+    method: "DELETE",
+    headers: {
+      "Content-Type": "application/json"
+    },
+    body: JSON.stringify({ ids })
+  });
+
+  const data = await response.json();
+  alert(data.message);
+
+  document.getElementById("selectAll").checked = false;
+  loadUsers();
+}
+function editUser(user) {
+  document.getElementById("editId").value = user._id;
+  document.getElementById("editName").value = user.name;
+  document.getElementById("editEmail").value = user.email;
+  document.getElementById("editAge").value = user.age;
+  document.getElementById("editCity").value = user.city;
+
+  const modal = new bootstrap.Modal(document.getElementById('editModal'));
+  modal.show();
+}
+
+async function updateUser() {
+  const id = document.getElementById("editId").value;
+
+  const formData = new FormData();
+  formData.append("name", document.getElementById("editName").value);
+  formData.append("email", document.getElementById("editEmail").value);
+  formData.append("age", document.getElementById("editAge").value);
+  formData.append("city", document.getElementById("editCity").value);
+
+  const imageFile = document.getElementById("editImage").files[0];
+  if (imageFile) {
+    formData.append("image", imageFile);
+  }
+
+  const response = await fetch(`/api/users/${id}`, {
+    method: "PUT",
+    body: formData
+  });
+
+  const data = await response.json();
+  alert(data.message);
+
+  bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
+  loadUsers();
+}
+
+
 loadUsers();
 </script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
